--- a/psdaq/psdaq/cnf/lab3-cpo.cnf
+++ b/psdaq/psdaq/cnf/lab3-cpo.cnf
@@ -3,11 +3,12 @@ username = 'lcls2'
 expname  = 'expname'
 expnum   = 'expnum'
 
-epics_env = 'EPICS_PVA_ADDR_LIST=172.21.42.255 EPICS_CA_ADDR_LIST=172.21.42.255 EPICS_CA_SERVER_PORT=5066 EPICS_CA_REPEATER_PORT=5067 EPICS_CA_AUTO_ADDR_LIST=NO'
+epics_env = 'EPICS_PVA_ADDR_LIST=172.21.42.255'
 conda_rel = 'ps-2.0.0'
 
 shelf = '2'
 ip_addr = '10.0.'+shelf
+collect_host = 'drp-tst-acc06'
 
 # procmgr FLAGS: <port number> static port number to keep executable
 #                              running across multiple start/stop commands.
@@ -32,7 +33,9 @@ procmgr_config = [
 # {                        id:'dtica', flags:'s', conda:conda_rel, env:epics_env, cmd:'dtica DAQ:LAB2:DTI:'+shelf},
  {                        id:'hsdca', flags:'s', conda:conda_rel, env:epics_env, cmd:'hsdca DAQ:LAB2:HSD:DEV02'},
 # { host: 'drp-tst-acc02', id:'EvtBuild', flags:'sxp', conda:conda_rel, cmd:'drpEbBuilder -1 8 -2 8' },
- { host: 'drp-tst-dev002', id:'teb1', flags:'sxp', conda:conda_rel, env:epics_env, cmd:'tstEbBuilder -C drp-tst-acc06' },
-# { host: 'drp-tst-dev024', id:'hsddrp', flags:'sxp', conda:conda_rel, cmd:'psdaq/build/drp/drp -o /tmp -l 0x1 -D Digitizer -C drp-tst-acc06 -d /dev/datadev_0'},
- { host: 'drp-tst-acc06', id:'Collection', flags:'sxp', conda:conda_rel, env:epics_env, cmd:'collection -v' },
+ { host: 'drp-tst-dev002', id:'teb1', flags:'sxp', conda:conda_rel, env:epics_env, cmd:'tstEbBuilder -C '+collect_host },
+{ host: 'drp-tst-dev024', id:'hsddrp', flags:'sxp', conda:conda_rel, cmd:'drp -o /tmp -l 0x1 -D Digitizer -d /dev/datadev_0 -C '+collect_host},
+ { host: collect_host, id:'Collection', flags:'sxp', conda:conda_rel, env:epics_env, cmd:'collection -v' },
+ {                        flags:'xp', id:'control_gui', conda:conda_rel, cmd:'control_gui -H '+collect_host},
+ { host: 'daq-tst-dev02', id:'dti_proxy', flags:'sp', conda:conda_rel, env:epics_env, cmd:'dti_proxy -v -C '+collect_host+' DAQ:LAB2:PART:'+platform},
 ]
