--- a/psdaq/psdaq/cnf/lab3-mhsd.cnf
+++ b/psdaq/psdaq/cnf/lab3-mhsd.cnf
@@ -9,8 +9,7 @@ expnum   = 'expnum'
 epics_host = 'daq-tst-dev02'
 
 conda_rel = 'ps-2.0.0'
-epics_env = 'EPICS_PVA_ADDR_LIST=172.21.42.255 EPICS_CA_ADDR_LIST=172.21.42.255 EPICS_CA_SERVER_PORT=5066 EPICS_CA_REPEATER_PORT=5067 EPICS_CA_AUTO_ADDR_LIST=NO'
-pcas_env = 'EPICS_CA_SERVER_PORT=5066 EPICS_CA_REPEATER_PORT=5067 EPICS_CAS_INTF_ADDR_LIST=172.21.42.150'
+epics_env = 'EPICS_PVA_ADDR_LIST=172.21.42.255'
 
 # can also set this environment in the shell.
 os.environ['TESTRELDIR'] = '/reg/neh/home/weaver/lcls2-git/install'
@@ -42,7 +41,7 @@ procmgr_config = [
 
 # {                        id:'modca', flags:'s', conda:conda_rel, env:epics_env, cmd:'xpmca DAQ:LAB2:XPM:2'},
  {                        id:'modca-1', flags:'s', conda:conda_rel, env:epics_env, cmd:'modca DAQ:LAB2:XPM:'+shelf},
- { host: epics_host,  id:'modcas-1', port:'29460', flags:'s', conda:conda_rel, env:pcas_env, cmd:'modcas -P DAQ:LAB2:XPM:1'},
+# { host: epics_host,  id:'modcas-1', port:'29460', flags:'s', conda:conda_rel, env:pcas_env, cmd:'modcas -P DAQ:LAB2:XPM:1'},
  { host: epics_host,  id:'xpmioc-1', port:'29461', flags:'s', conda:conda_rel, env:epics_env, cmd:'xpmPVs -a 10.0.1.103 -P DAQ:LAB2'},
 
  {                        id:'procstat', flags:'sp', conda:conda_rel, cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
