--- a/psdaq/psdaq/cnf/lab3-dubrovin-test.cnf
+++ b/psdaq/psdaq/cnf/lab3-dubrovin-test.cnf
@@ -25,7 +25,7 @@ collect_host = 'drp-tst-acc06'
 procmgr_config = [
  {                        id:'procstat', flags:'p', conda:conda_rel, cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
  { host: collect_host,    id:'collection', flags:'sxp', conda:conda_rel, cmd:'collection -v'},
-#{ host: 'daq-tst-dev02', id:'dti_proxy', flags:'sxp', conda:conda_rel, env:epics_env, cmd:'dti_proxy -v -C '+collect_host+' DAQ:LAB2:PART:'+platform},
+#{ host: 'daq-tst-dev02', id:'ts_proxy', flags:'sxp', conda:conda_rel, env:epics_env, cmd:'ts_proxy -v -C '+collect_host+' DAQ:LAB2:PART:'+platform},
  {                        flags:'xp', id:'control_gui', conda:conda_rel, cmd:'control_gui -H '+collect_host},
 # test clients
  {                        flags:'xp', id:'testClient2a', conda:conda_rel, cmd:'testClient2 -v -C '+collect_host},
