--- a/psdaq/psdaq/cnf/lab3-cpo.cnf
+++ b/psdaq/psdaq/cnf/lab3-cpo.cnf
@@ -34,7 +34,7 @@ procmgr_config = [
  {                        id:'hsdca', flags:'s', conda:conda_rel, env:epics_env, cmd:'hsdca DAQ:LAB2:HSD:DEV02'},
 # { host: 'drp-tst-acc02', id:'EvtBuild', flags:'sxp', conda:conda_rel, cmd:'drpEbBuilder -1 8 -2 8' },
  { host: 'drp-tst-dev002', id:'teb1', flags:'sxp', conda:conda_rel, env:epics_env, cmd:'tstEbBuilder -C '+collect_host },
-{ host: 'drp-tst-dev024', id:'hsddrp', flags:'sxp', conda:conda_rel, cmd:'drp -o /tmp -l 0x1 -D Digitizer -d /dev/datadev_0 -C '+collect_host},
+{ host: 'drp-tst-dev024', id:'hsddrp', flags:'sxp', conda:conda_rel, cmd:'drp -o /ffb01/tstopr -l 0x1 -D Digitizer -d /dev/datadev_0 -C '+collect_host},
  { host: collect_host, id:'Collection', flags:'sxp', conda:conda_rel, env:epics_env, cmd:'collection -v' },
  {                        flags:'xp', id:'control_gui', conda:conda_rel, cmd:'control_gui -H '+collect_host},
  { host: 'daq-tst-dev02', id:'ts_proxy', flags:'sp', conda:conda_rel, env:epics_env, cmd:'ts_proxy -v -C '+collect_host+' DAQ:LAB2:PART:'+platform},
