--- a/psdaq/drp/CMakeLists.txt
+++ b/psdaq/drp/CMakeLists.txt
@@ -42,6 +42,21 @@ target_link_libraries(drp
     zmq
 )
 
+add_executable(test_hsd_config
+    test_hsd_config.cc
+)
+
+target_include_directories(test_hsd_config PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
+    ${PYTHON_INCLUDE_DIRS}
+    $ENV{CONDA_PREFIX}/include)
+
+target_link_libraries(test_hsd_config
+    xtcdata::j2x
+    xtcdata::xtc
+    ${PYTHON_LIBRARIES}
+)
+
 add_executable(pgpread
     pgpread.cc
 )
