--- a/psdaq/psdaq/cnf/lab3-weninc.cnf
+++ b/psdaq/psdaq/cnf/lab3-weninc.cnf
@@ -31,25 +31,24 @@ procmgr_config = [
  { id:'procstat', flags:'sp', conda:conda_rel, cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
  { id:'modca1'  ,flags:'s', conda:conda_rel, env:epics_env, cmd:'modca DAQ:LAB2:XPM:1'},
  { id:'modca2'  ,flags:'s', conda:conda_rel, env:epics_env, cmd:'modca DAQ:LAB2:XPM:2'},
- { host: 'drp-tst-acc06', id:'Collection', flags:'sxp', conda:conda_rel, env:epics_env, cmd:'collection -v' },
- { host: 'daq-tst-dev02', id:'ts_proxy', flags:'sup', conda:conda_rel, env:epics_env, cmd:'ts_proxy -v -C drp-tst-acc06 DAQ:LAB2:PART:'+platform},
- { host: 'drp-tst-dev001', id:'teb1', flags:'sxp', conda:conda_rel, env:epics_env, cmd:'tstEbBuilder -C drp-tst-acc06 -Z psmetric04' },
+ { host: 'drp-tst-acc06', id:'Collection', flags:'sxp', conda:conda_rel, env:epics_env, cmd:'collection -v -B DAQ:LAB2:PART:'+platform},
+ { host: 'drp-tst-dev001', id:'teb1', flags:'sxp', conda:conda_rel, cmd:'tstEbBuilder -C drp-tst-acc06 -Z psmetric04' },
 
- { host: 'drp-tst-dev002', id:'drp2', flags:'sxp', conda:conda_rel, env:epics_env, cmd: drp_cmd },
- { host: 'drp-tst-dev003', id:'drp3', flags:'sxp', conda:conda_rel, env:epics_env, cmd: drp_cmd },
- { host: 'drp-tst-dev004', id:'drp4', flags:'sxp', conda:conda_rel, env:epics_env, cmd: drp_cmd },
- { host: 'drp-tst-dev005', id:'drp5', flags:'sxp', conda:conda_rel, env:epics_env, cmd: drp_cmd },
+ { host: 'drp-tst-dev002', id:'drp2', flags:'sxp', conda:conda_rel, cmd: drp_cmd },
+ { host: 'drp-tst-dev003', id:'drp3', flags:'sxp', conda:conda_rel, cmd: drp_cmd },
+ { host: 'drp-tst-dev004', id:'drp4', flags:'sxp', conda:conda_rel, cmd: drp_cmd },
+ { host: 'drp-tst-dev005', id:'drp5', flags:'sxp', conda:conda_rel, cmd: drp_cmd },
 
  # broken{ host: 'drp-tst-dev007', id:'drp7', flags:'sxp', conda:conda_rel, env:epics_env, cmd: drp_cmd },
 
- { host: 'drp-tst-dev009', id:'drp9', flags:'sxp', conda:conda_rel, env:epics_env, cmd: drp_cmd },
- { host: 'drp-tst-dev011', id:'drp11', flags:'sxp', conda:conda_rel, env:epics_env, cmd: drp_cmd },
+ { host: 'drp-tst-dev009', id:'drp9', flags:'sxp', conda:conda_rel, cmd: drp_cmd },
+ { host: 'drp-tst-dev011', id:'drp11', flags:'sxp', conda:conda_rel, cmd: drp_cmd },
 
  # no procmgrd { host: 'drp-tst-dev012', id:'drp12', flags:'sxp', conda:conda_rel, env:epics_env, cmd: drp_cmd }
 
- { host: 'drp-tst-dev013', id:'drp13', flags:'sxp', conda:conda_rel, env:epics_env, cmd: drp_cmd },
- { host: 'drp-tst-dev014', id:'drp14', flags:'sxp', conda:conda_rel, env:epics_env, cmd: drp_cmd },
- { host: 'drp-tst-dev015', id:'drp15', flags:'sxp', conda:conda_rel, env:epics_env, cmd: drp_cmd },
- { host: 'drp-tst-dev017', id:'drp17', flags:'sxp', conda:conda_rel, env:epics_env, cmd: drp_cmd },
- { host: 'drp-tst-dev018', id:'drp18', flags:'sxp', conda:conda_rel, env:epics_env, cmd: drp_cmd }
+ { host: 'drp-tst-dev013', id:'drp13', flags:'sxp', conda:conda_rel, cmd: drp_cmd },
+ { host: 'drp-tst-dev014', id:'drp14', flags:'sxp', conda:conda_rel, cmd: drp_cmd },
+ { host: 'drp-tst-dev015', id:'drp15', flags:'sxp', conda:conda_rel, cmd: drp_cmd },
+ { host: 'drp-tst-dev017', id:'drp17', flags:'sxp', conda:conda_rel, cmd: drp_cmd },
+ { host: 'drp-tst-dev018', id:'drp18', flags:'sxp', conda:conda_rel, cmd: drp_cmd }
 ]
