add more debug output for the drp

--- a/psdaq/drp/CMakeLists.txt
+++ b/psdaq/drp/CMakeLists.txt
@@ -69,13 +69,25 @@ target_link_libraries(pgpread
     xtcdata::xtc
 )
 
-#add_executable(tdetsim2
-#    tdetsim.cc
-#)
+add_executable(tdetsim2
+    tdetsim.cc
+)
 
-#target_include_directories(tdetsim2 PUBLIC
-#    ../psdaq/pgp/aes-stream-drivers/include
-#)
+target_include_directories(tdetsim2 PUBLIC
+    ../psdaq/pgp/aes-stream-drivers/include
+)
+
+add_executable(drp_validate
+    validate.cc
+)
+
+target_include_directories(drp_validate PUBLIC
+    ../psdaq/pgp/aes-stream-drivers/include
+)
+
+target_link_libraries(drp_validate
+    pthread
+)
 
 install(TARGETS drputils drp
   ARCHIVE DESTINATION lib
