--- a/psdaq/psdaq/cnf/lab3-weninc.cnf
+++ b/psdaq/psdaq/cnf/lab3-weninc.cnf
@@ -4,10 +4,11 @@ expname  = 'expname'
 expnum   = 'expnum'
 
 epics_env = 'EPICS_PVA_ADDR_LIST=172.21.42.255'
-conda_rel = 'ps-2.0.0'
+conda_rel = 'ps-2.0.1'
 
 shelf = '2'
 ip_addr = '10.0.'+shelf
+collect_host = 'drp-tst-acc06'
 
 # procmgr FLAGS: <port number> static port number to keep executable
 #                              running across multiple start/stop commands.
@@ -24,15 +25,15 @@ ip_addr = '10.0.'+shelf
 #        'u'         -> uniqueid: use 'id' as detector alias (supported by acq, cam, camedt, evr, and simcam)
 
 # -o /ffb01/weninc
-drp_cmd = 'drp -C drp-tst-acc06 -D AreaDetector -l 0xf -d /dev/datadev_1'
+drp_cmd = 'drp -D AreaDetector -l 0xf -d /dev/datadev_0 -C '+collect_host
 
 procmgr_config = [
  { id:'partca-'+platform ,flags:'s', conda:conda_rel, env:epics_env, cmd:'partca DAQ:LAB2:PART:'+platform},
  { id:'procstat', flags:'sp', conda:conda_rel, cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
  { id:'modca1'  ,flags:'s', conda:conda_rel, env:epics_env, cmd:'modca DAQ:LAB2:XPM:1'},
  { id:'modca2'  ,flags:'s', conda:conda_rel, env:epics_env, cmd:'modca DAQ:LAB2:XPM:2'},
- { host: 'drp-tst-acc06', id:'Collection', flags:'sxp', conda:conda_rel, env:epics_env, cmd:'collection -v -B DAQ:LAB2:PART:'+platform},
- { host: 'drp-tst-dev001', id:'teb1', flags:'sxp', conda:conda_rel, cmd:'tstEbBuilder -C drp-tst-acc06 -Z psmetric04' },
+ { host: collect_host, id:'Collection', flags:'sxp', conda:conda_rel, env:epics_env, cmd:'collection -v -B DAQ:LAB2:PART:'+platform},
+ { host: 'drp-tst-dev001', id:'teb1', flags:'sxp', conda:conda_rel, cmd:'tstEbBuilder -Z psmetric04 -C '+collect_host},
 
  #{ host: 'drp-tst-dev002', id:'drp2', flags:'sxp', conda:conda_rel, cmd: drp_cmd },
  #{ host: 'drp-tst-dev003', id:'drp3', flags:'sxp', conda:conda_rel, cmd: drp_cmd },
@@ -50,5 +51,6 @@ procmgr_config = [
  #{ host: 'drp-tst-dev014', id:'drp14', flags:'sxp', conda:conda_rel, cmd: drp_cmd },
  #{ host: 'drp-tst-dev015', id:'drp15', flags:'sxp', conda:conda_rel, cmd: drp_cmd },
  #{ host: 'drp-tst-dev017', id:'drp17', flags:'sxp', conda:conda_rel, cmd: drp_cmd },
- #{ host: 'drp-tst-dev018', id:'drp18', flags:'sxp', conda:conda_rel, cmd: drp_cmd }
+ { host: 'drp-tst-dev018', id:'drp18', flags:'sxp', conda:conda_rel, cmd: drp_cmd },
+ {                        flags:'xp', id:'control_gui', conda:conda_rel, cmd:'control_gui -H '+collect_host},
 ]
