--- a/psdaq/psdaq/cnf/lab3-weninc.cnf
+++ b/psdaq/psdaq/cnf/lab3-weninc.cnf
@@ -34,26 +34,26 @@ procmgr_config = [
  { id:'modca1'  ,flags:'s', conda:conda_rel, env:epics_env, cmd:'modca DAQ:LAB2:XPM:1'},
  { id:'modca2'  ,flags:'s', conda:conda_rel, env:epics_env, cmd:'modca DAQ:LAB2:XPM:2'},
  { host: collect_host, id:'Collection', flags:'sxp', conda:conda_rel, env:epics_env, cmd:'collection -v -B DAQ:LAB2:PART:'+platform},
- { host: 'drp-tst-dev001', id:'teb1', flags:'sxp', conda:conda_rel, cmd:'tstEbBuilder -Z '+rtmon_host+' -C '+collect_host},
+ { host: 'drp-tst-dev001', id:'teb1', flags:'sxpu', conda:conda_rel, cmd:'tstEbBuilder -Z '+rtmon_host+' -C '+collect_host},
 
- #{ host: 'drp-tst-dev002', id:'drp2', flags:'sxp', conda:conda_rel, cmd: drp_cmd },
- #{ host: 'drp-tst-dev003', id:'drp3', flags:'sxp', conda:conda_rel, cmd: drp_cmd },
- #{ host: 'drp-tst-dev004', id:'drp4', flags:'sxp', conda:conda_rel, cmd: drp_cmd },
- #{ host: 'drp-tst-dev005', id:'drp5', flags:'sxp', conda:conda_rel, cmd: drp_cmd },
+ #{ host: 'drp-tst-dev002', id:'drp2', flags:'sxpu', conda:conda_rel, cmd: drp_cmd },
+ #{ host: 'drp-tst-dev003', id:'drp3', flags:'sxpu', conda:conda_rel, cmd: drp_cmd },
+ #{ host: 'drp-tst-dev004', id:'drp4', flags:'sxpu', conda:conda_rel, cmd: drp_cmd },
+ #{ host: 'drp-tst-dev005', id:'drp5', flags:'sxpu', conda:conda_rel, cmd: drp_cmd },
 
- #{ host: 'drp-tst-dev007', id:'drp7', flags:'sxp', conda:conda_rel, cmd: drp_cmd },
+ #{ host: 'drp-tst-dev007', id:'drp7', flags:'sxpu', conda:conda_rel, cmd: drp_cmd },
 
- #{ host: 'drp-tst-dev009', id:'drp9', flags:'sxp', conda:conda_rel, cmd: drp_cmd },
- #{ host: 'drp-tst-dev011', id:'drp11', flags:'sxp', conda:conda_rel, cmd: drp_cmd },
+ #{ host: 'drp-tst-dev009', id:'drp9', flags:'sxpu', conda:conda_rel, cmd: drp_cmd },
+ #{ host: 'drp-tst-dev011', id:'drp11', flags:'sxpu', conda:conda_rel, cmd: drp_cmd },
 
- # no procmgrd { host: 'drp-tst-dev012', id:'drp12', flags:'sxp', conda:conda_rel, env:epics_env, cmd: drp_cmd }
+ # no procmgrd { host: 'drp-tst-dev012', id:'drp12', flags:'sxpu', conda:conda_rel, env:epics_env, cmd: drp_cmd }
 
- #{ host: 'drp-tst-dev013', id:'drp13', flags:'sxp', conda:conda_rel, cmd: drp_cmd },
- #{ host: 'drp-tst-dev014', id:'drp14', flags:'sxp', conda:conda_rel, cmd: drp_cmd },
- #{ host: 'drp-tst-dev015', id:'drp15', flags:'sxp', conda:conda_rel, cmd: drp_cmd },
- #{ host: 'drp-tst-dev017', id:'drp17', flags:'sxp', conda:conda_rel, cmd: drp_cmd },
- { host: 'drp-tst-dev018', id:'drp18', flags:'sxp', conda:conda_rel, cmd: drp_cmd },
+ #{ host: 'drp-tst-dev013', id:'drp13', flags:'sxpu', conda:conda_rel, cmd: drp_cmd },
+ #{ host: 'drp-tst-dev014', id:'drp14', flags:'sxpu', conda:conda_rel, cmd: drp_cmd },
+ #{ host: 'drp-tst-dev015', id:'drp15', flags:'sxpu', conda:conda_rel, cmd: drp_cmd },
+ #{ host: 'drp-tst-dev017', id:'drp17', flags:'sxpu', conda:conda_rel, cmd: drp_cmd },
+ { host: 'drp-tst-dev018', id:'drp18', flags:'sxpu', conda:conda_rel, cmd: drp_cmd },
  {                        flags:'xp', id:'control_gui', conda:conda_rel, cmd:'control_gui -H '+collect_host},
 
- #{ host: 'drp-tst-dev019', id:'meb1', flags:'sxp', conda:conda_rel, cmd:'monReqServer -P Test -d -q 4 -Z '+rtmon_host+' -C '+collect_host},
+ #{ host: 'drp-tst-dev019', id:'meb1', flags:'sxpu', conda:conda_rel, cmd:'monReqServer -P Test -d -q 4 -Z '+rtmon_host+' -C '+collect_host},
 ]
