--- a/psdaq/psdaq/monreq/CMakeLists.txt
+++ b/psdaq/psdaq/monreq/CMakeLists.txt
@@ -4,7 +4,7 @@ add_executable(monReqServer
 
 target_link_libraries(monReqServer
     psalg::shmemsrv
-    eb
+    eventBuilder
     collection
     pthread
     rt
