Add RegProxy for queueing slow axi transactions.

--- a/psdaq/psdaq/mmhw/CMakeLists.txt
+++ b/psdaq/psdaq/mmhw/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library(mmhw SHARED
     AxiVersion.cc
     HexFile.cc
     McsFile.cc
+    RegProxy.cc
     RingBuffer.cc
     GthEyeScan.cc
     Xvc.cc
