Add ctrb to configuration.

--- a/psdaq/psdaq/cnf/lab3-caf-cam.cnf
+++ b/psdaq/psdaq/cnf/lab3-caf-cam.cnf
@@ -33,6 +33,9 @@ procmgr_config = [
  {                        flags:'xp', id:'control_gui', conda:conda_rel, cmd:'control_gui -H '+collect_host},
  # trigger event builder
  { host: 'drp-tst-dev001', id:'teb1', flags:'sxpu', conda:conda_rel, cmd:'teb -C '+collect_host+' -Z '+rtmon_host},
+ # ctrb
+ { host: 'drp-tst-dev007', id:'ctrb', flags:'sxpu', conda:conda_rel, cmd:'ctrb -C '+collect_host+' -Z '+rtmon_host},
+ # drp
  { host: 'drp-tst-dev009', id:'drp0', flags:'sxpu', conda:conda_rel, cmd:'drp -l 0xf -D AreaDetector -d /dev/datadev_0 -o /tmp -C '+collect_host},
  { host: 'drp-tst-dev008', id:'drp1', flags:'sxpu', conda:conda_rel, cmd:'drp -l 0xf -D AreaDetector -d /dev/datadev_0 -o /tmp -C '+collect_host}
 ]
